Add SE Attribution

--- a/seconcordance/concordance/templates/concordance/index.html
+++ b/seconcordance/concordance/templates/concordance/index.html
@@ -185,12 +185,16 @@
 					This site uses the <a href="http://biblia.com/">Biblia</a> web services from <a href="http://www.logos.com/">Logos Bible Software</a>.
 				</DIV>
 
+				<DIV> 
+					<a href='http://http://blog.stackoverflow.com/2009/06/attribution-required/'>All content is licensed to StackExchange, under the Creative Commons-SA license.</a> The only value add in this site is the organization by verse reference and search functionality.
+				</DIV>
+
 				<BR />
 				<BR />
 				<BR />
 
 				<DIV>
-					<p>Brought to you by:</p>
+					<p>Developed by:</p>
 					<a title="&lt;img src=&quot;http://stackexchange.com/users/flair/45534.png&quot; width=&quot;208&quot; height=&quot;58&quot; alt=&quot;profile for Affable Geek on Stack Exchange, a network of free, community-driven Q&amp;A sites&quot; title=&quot;profile for Affable Geek on Stack Exchange, a network of free, community-driven Q&amp;A sites&quot; /&gt;" href="http://stackexchange.com/users/45534/affable-geek"><img src="http://stackexchange.com/users/flair/45534.png" width="208" height="58" alt="profile for Affable Geek on Stack Exchange, a network of free, community-driven Q&#038;A sites" title="profile for Affable Geek on Stack Exchange, a network of free, community-driven Q&#038;A sites" /></a>
 				</DIV>
 			</DIV>
