--- a/seconcordance/concordance/templates/concordance/index.html
+++ b/seconcordance/concordance/templates/concordance/index.html
@@ -18,7 +18,7 @@
 			td.title {width: 80%;}
 
 			td.reference strong {font-size: large;}
-			span.vote-count-pass {font-size: large;}
+			span.vote-count-pass {display: none}
 
 			INPUT#page { width: 30px;}
 
