--- a/seconcordance/concordance/templates/concordance/index.html
+++ b/seconcordance/concordance/templates/concordance/index.html
@@ -156,15 +156,15 @@
 									<div class="summary">
 										<h3>
 											<a class='question-hyperlink tooltip' onhover='popup(this)' href="{{found_ref.sepost.se_link}}">
-												{{found_ref.sepost.posttitle}}
+												{% highlight_search_term found_ref.sepost.posttitle filters.terms %}
 											</a>
 										</h3>
 										<div class="excerpt">
-											<!--{% if filters.terms %}-->
+											{% if filters.terms %}
 												{% highlight_search_term found_ref.sepost.body filters.terms %}
-											<!--{% elif filters.range %}
+											{% elif filters.range %}
 												{% highlight_verse_reference found_ref %}
-											{% endif %}-->
+											{% endif %}
 										</div>
 									</div>
 
