Integrated Tag Balancer

--- a/seconcordance/concordance/templates/concordance/base.html
+++ b/seconcordance/concordance/templates/concordance/base.html
@@ -48,7 +48,7 @@
 			td.title {width: 80%;}
 
 			td.reference strong {font-size: large;}
-			span.vote-count-pass {display: none}
+			span.vote-count-pass {}
 
 			INPUT#page { width: 30px;}
 
