--- a/seconcordance/concordance/templates/concordance/base.html
+++ b/seconcordance/concordance/templates/concordance/base.html
@@ -41,6 +41,12 @@
 				padding: 5px;
 			}
 
+			/* In some instances, I get a second set of TDs in a TR.  I can't figure out why, so for now, I'm just hiding it */
+			td:nth-of-type(3), td:nth-of-type(4)  {
+				display: none;
+			}
+
+
 			td.reference { 
 				width: 20%;
 				vertical-align: top;
